--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(213, 29, 233);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(197, 45, 252);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(143, 100, 189);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(157, 9, 31);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(130, 21, 188);
 }
