--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@ body {
     margin-bottom: 100px;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+body {
+    background-image: repeating-radial-gradient(circle, rgb(71, 2, 168) 0%, rgb(56, 7, 86) 50%, transparent 50%, transparent 100%);
+
+}
+
 header {
     border-bottom: solid 2px rgb(213, 29, 233);
     padding: 20px;
